fix ctrl+A not working in location bar

initial patch from Matt Rogers, with enlightning input from
Hamish Rodda leading to solution.

BUG:153114

svn path=/trunk/KDE/kdelibs/; revision=757275